@@ -1,5 +1,10 @@
 2002-08-20  Dominik Vogt  <dominik.vogt@gmx.de>
 
+	* fvwm/events.c (HandleEnterNotify):
+	fixed UngrabNotify returning focus to just unfocused window
+	* fvwm/focus.h:
+	added debug code
+
 	* fvwm/style.c (merge_styles):
 	(free_style_mask):
 	(__simplify_style_list):
